--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<nav>
+ <a href="home">Beranda</a>
+ <a href="history">Sejarah</a>
+ <a href="contact">Kontak</a>
+</nav>
 <h1>Deja vu</h1>
 <p>lagu ini aku suka banget karena dia punya makna dan melodi yang indah, cocok buat baca buku, apalagi pas di cover sama martin cortis vibes nya jadi kaya anak senja banget gituu ahaha. TXT yang berisikan 5 orang anggota ini bikin aku tertarik terus sama lagu lagunya karna emang secandu itu dan lagu yang paling aku suka ya itu tadi lagu deja vu.</p>
-<b>I LOVE DEJA Vu :v</b>
+<b>I LOVE DEJA Vu :v 🦊</b
